objects/ROS_EXPORT_COLUMNS__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Export Columns for ROS CSV files.</description>
    <fields>
        <fullName>Api_Name__c</fullName>
        <label>Api Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column_Name__c</fullName>
        <label>Column Name</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCsr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCsr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsExport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReticleDevice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check if column is Reticle Device Search Related.</inlineHelpText>
        <label>IsReticleDevice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReticleFab__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check if column is Reticle Fab Search Related.</inlineHelpText>
        <label>IsReticleFab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReticle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Column will be for Reticle Export.</description>
        <inlineHelpText>Please check if column is Reticle Search Related.</inlineHelpText>
        <label>IsReticle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsWwsm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsWwsm</label>
        <type>Checkbox</type>
    </fields>
    <label>ROS EXPORT COLUMNS</label>
</CustomObject>